--- a/requirements.txt
+++ b/requirements.txt
@@ -6,6 +6,7 @@ cryptography==36.0.1
 defusedxml==0.7.1
 Django==4.0.2
 django-allauth==0.48.0
+django-crispy-forms==1.14.0
 idna==3.3
 oauthlib==3.2.0
 pycparser==2.21
